# scannet_segmentator

./: .gitignore  README.md  pyproject.toml  setup.py
functions/: main.py  utils.py
